# Podcast-Transcription-CLI-Tool

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.calibre  Makefile  README.md  RELEASE.md  Transcribe_podcast_to_text.sh  compose.yaml  coverage.xml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: lint_cleanup.md
.github/workflows/: ci.yml  docs.yml  e2e-nightly.yml  e2e.yml  smoke.yml
docs/: dependencies.md  examples.md  index.md  interactive.md  orchestrator-config.md  plugins.md  production.md  services.md  themes.md  troubleshooting.md  usage.md  whisper-languages.md
examples/: config.sample.yml  generate_tone.py
examples/fonts/: README.md
examples/plugin_echo/: README.md  pyproject.toml
examples/plugin_echo/src/podcast_transcriber_echo_plugin/: service.py
examples/recipes/: e2e_whisper.yml  oxford_cc.yml  oxford_premium.yml  oxford_quick.yml
examples/templates/: ebook_theme_minimal.md.j2
scripts/: check_env_example.py  ci_local.sh  e2e_cli_matrix.sh  e2e_docker.sh  smoke.sh
src/podcast_transcriber/: __init__.py  cli.py  orchestrator.py
src/podcast_transcriber/delivery/: send_to_kindle.py
src/podcast_transcriber/exporters/: __init__.py  exporter.py  themes.css  themes.py
src/podcast_transcriber/flows/: auto_run.py
src/podcast_transcriber/ingestion/: feed.py
src/podcast_transcriber/kindle/: epub_builder.py
src/podcast_transcriber/nlp/: segment_topics.py
src/podcast_transcriber/services/: __init__.py  aws_transcribe.py  base.py  gcp_speech.py  whisper.py
src/podcast_transcriber/storage/: state.py
src/podcast_transcriber/templates/: ebook.md.j2  render.py
src/podcast_transcriber/utils/: cache.py  downloader.py  textproc.py
tests/: test_cli.py  test_cli_batch_combine.py  test_cli_batch_combine_coverbytes.py  test_cli_batch_errors.py  test_cli_config_fallback.py  test_cli_cover_fallback.py  test_cli_errors.py  test_cli_more.py  test_cli_more_errors_and_options.py  test_cloud_services.py  test_cloud_services_failure.py  test_downloader.py  test_downloader_extra.py  test_downloader_youtube.py  test_export_book_epub.py  test_export_book_other_formats.py  test_exporter_kindle_error.py  test_exporters.py  test_exporters_docx_more.py  test_exporters_json_words.py  test_exporters_pdf_more.py  test_exporters_segments_epub.py  test_exporters_simple.py  test_exporters_theme_import.py  test_exporters_vtt_docx.py  test_ingestion_categories_and_image.py  test_ingestion_more.py  test_nlp_segment_topics.py  test_orchestrator_commands.py  test_orchestrator_ingest_markdown.py  test_orchestrator_minutes_takeaways.py  test_orchestrator_multi_outputs.py  test_orchestrator_semantic.py  test_orchestrator_send.py  test_services_aws_requires_boto3.py  test_services_gcp_requires_pkg.py  test_services_plugins.py  test_services_plugins_bad_factory.py  test_services_whisper.py  test_storage_state.py  (+3 more)
