[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "podcast-transcriber-echo-plugin"
version = "0.0.0"
description = "Example plugin for podcast-transcriber: an 'echo' service"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Example" }]
dependencies = [
  "podcast-transcriber>=1.2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points."podcast_transcriber.services"]
echo = "podcast_transcriber_echo_plugin.service:EchoService"

